--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="static/styles/table.css" type="text/css" />
 </head>
 
-<body>
+<body bacground="file:///C:/Users/CORE%20i5/Pictures/fondos/eee.jpg">
     <div class="app" ui-view ng-controller="MainCtrl"></div>
     <!-- 3rd-Party packages -->
     <script src="bower_components/angular/angular.min.js"></script>
@@ -40,18 +40,18 @@
     <script src="app/services/authInterceptorService.js"></script>
     <script src="app/services/menuService.js"></script>
     <script src="app/controllers/main.js"></script>
-    <!-- ui_web app -->
-    <script src="ioteca_web_apps/ui_web/router.js"></script>
-    <script src="ioteca_web_apps/ui_web/controllers/nom.js"></script>
-    <script src="ioteca_web_apps/ui_web/controllers/pag.js"></script>
-    <script src="ioteca_web_apps/ui_web/controllers/dir.js"></script>
-    <!-- auths_web app -->
-    <script src="ioteca_web_apps/auths_web/config.js"></script>
-    <script src="ioteca_web_apps/auths_web/router.js"></script>
-    <script src="ioteca_web_apps/auths_web/services/authsService.js"></script>
-    <script src="ioteca_web_apps/auths_web/controllers/menu.js"></script>
-    <script src="ioteca_web_apps/auths_web/controllers/permission.js"></script>
-    <script src="ioteca_web_apps/auths_web/controllers/log.js"></script>
+    <!-- mantenimiento_web app -->
+    <script src="ioteca_web_apps/mantenimiento_web/router.js"></script>
+    <script src="ioteca_web_apps/mantenimiento_web/controllers/nom.js"></script>
+    <script src="ioteca_web_apps/mantenimiento_web/controllers/pag.js"></script>
+    <script src="ioteca_web_apps/mantenimiento_web/controllers/dir.js"></script>
+    <!-- reporte_web app -->
+    <script src="ioteca_web_apps/reporte_web/config.js"></script>
+    <script src="ioteca_web_apps/reporte_web/router.js"></script>
+    <script src="ioteca_web_apps/reporte_web/services/authsService.js"></script>
+    <script src="ioteca_web_apps/reporte_web/controllers/menu.js"></script>
+    <script src="ioteca_web_apps/reporte_web/controllers/permission.js"></script>
+    <script src="ioteca_web_apps/reporte_web/controllers/log.js"></script>
     <!-- catalogo_web app -->
     <script src="ioteca_web_apps/catalogo_web/config.js"></script>
     <script src="ioteca_web_apps/catalogo_web/services/catalogoService.js"></script>
