--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="static/styles/table.css" type="text/css" />
 </head>
 
-<body >
+<body bacground="file:///C:/Users/CORE%20i5/Pictures/fondos/eee.jpg">
     <div class="app" ui-view ng-controller="MainCtrl"></div>
     <!-- 3rd-Party packages -->
     <script src="bower_components/angular/angular.min.js"></script>
@@ -57,8 +57,6 @@
     <script src="ioteca_web_apps/catalogo_web/services/catalogoService.js"></script>
     <script src="ioteca_web_apps/catalogo_web/controllers/categorias.js"></script>
     <script src="ioteca_web_apps/catalogo_web/controllers/autores.js"></script>
-    
-    
 </body>
 
 </html>
