--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -57,6 +57,6 @@
     <script src="ioteca_web_apps/catalogo_web/services/catalogoService.js"></script>
     <script src="ioteca_web_apps/catalogo_web/controllers/categorias.js"></script>
     <script src="ioteca_web_apps/catalogo_web/controllers/autores.js"></script>
-</body>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 
 </html>
